--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ var g = svg.selectAll()
         .attr("x1", function(d) { return x(d.date); })
         .attr("y1", function(d) { return y(d.time); })
 		    //d3.min gets the min date from the date x-axis scale
-		    .attr("x2", function(d) { return x(d3.min(x)); })
+		.attr("x2", function(d) { return x(d3.min(x)); })
         .attr("y2", function(d) { return y(d.time); });
 
   //The vertical dashed line that appears when a circle marker is moused over
@@ -173,7 +173,7 @@ var g = svg.selectAll()
         .style("opacity", 0)
         .attr("x1", function(d) { return x(d.date); })
         .attr("y1", function(d) { return y(d.time); })
-		    .attr("x2", function(d) { return x(d.date); })
+		.attr("x2", function(d) { return x(d.date); })
         .attr("y2", height);
   // SLA
   
@@ -249,7 +249,14 @@ svg.append("text")      // text label for the y-axis
         .attr("transform", "rotate(-90)")
         .style("text-anchor", "end")
         .style("font-size", "16px")
-        .text("time");
+        .text("time(in seconds)");
+
+svg.append("line")          // attach a line
+        .style("stroke", "red")  // colour the line
+        .attr("x1", 0)     // x position of the first end of the line
+        .attr("y1", function (d) { return y(79200); })      // y position of the first end of the line
+        .attr("x2", width)     // x position of the second end of the line
+        .attr("y2", function (d) { return y(79200); });    // y position of the second end of the line
 
 //http://www.d3noob.org/2013/01/adding-title-to-your-d3js-graph.html
 svg.append("text")      // text label for chart Title
