--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ div.tooltip {
   <label><input type="radio" name="dataset" value="apples" checked> Apples</label>
   <label><input type="radio" name="dataset" value="oranges"> Oranges</label>
 </form>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="./d3-3.3.0/d3.js"></script>
 <script>
 var dataFile = "logs.csv"; 
 
@@ -454,4 +454,4 @@ inputData(dataFile);
 </script>
 <div id="option">
         <input name="updateButton" type="button" value="Update" onclick="updateGraph(new Date('2017-06-11')) "/>
-    </div>
+</div>
